# vertifile

./: .dockerignore  .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  blockchain.js  db.js  demo.pvf  docker-compose.dev.yml  docker-compose.yml  hardhat.config.js  nixpacks.toml  obfuscate.js  package-lock.json  package.json  railway.json  sdk.js  server.js  setup.sh  vercel.json
.github/: dependabot.yml
contracts/: VertifileRegistry.sol  deploy.js
data/: common-passwords.txt
docs/: DEPLOYMENT.md  PDF-JS-INLINE-SPEC.md  RUNBOOK-PHASE3D.md  Vertifile-Architecture-Review.html  ZERO-KNOWLEDGE-SPEC.md  auth-final-approval-avi.md  auth-review-avi.md  auth-security-spec.md  customer-review-liron.md  dashboard-review-amit-chen.md  dashboard-spec.md  demo-video-script.md  homepage-review-pingpong.md  leads-admin-dashboard-spec.md  onboarding-spec.md  outreach-templates.md  pentest-zk-2026-04-10.md  pingpong-guide.md  pingpong-tracker.md  product-audit-2026-04-04.md  regression-zk-2026-04-10.md  systems-map.md  team-review-3day-2026-04-09.md
middleware/: auth.js  csrf.js  error-alerter.js  error-handler.js  request-logger.js  requireAuth.js  requireSubscription.js  response-envelope.js  sanitize.js  timeout.js
migrations/: 001_users.sql  002_onboarding_emails.sql  onboarding.sql
public/: 404.html  about.html  admin.html  app.html  blog.html  contact.html  cookie-policy.html  demo.html  (+26 more)
viewer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
viewer-tauri/src-tauri/src/: lib.rs  main.rs
(+195 files in other folders)
