[package]
name = "pvf-viewer"
version = "1.0.0"
description = "PVF Viewer - Lightweight document viewer for Vertifile PVF documents"
authors = ["Vertifile"]
edition = "2021"

[lib]
name = "pvf_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
